(library
  (name broom_lib)
  (public_name broom.lib)
  (libraries containers containers-data streaming menhirLib pprint)
  (preprocess (pps sedlex.ppx))
  (library_flags -ccopt -Wl,-z,relro,-z,now))

(copy_files# (files Util/*))
(copy_files# (files IRCommon/*))
(copy_files# (files Ast/*))
(copy_files# (files Expander/*))
(copy_files# (files Typechecker/*))

(menhir (modules Parser))

